# drawclock

./: .gitignore  PACKAGING.md  README.md  drawclock-cli.spec  drawclock-reload.spec  drawclock.spec  example.bat  json.md  pack.bat  pyproject.toml  rule.md  test.bat  update.bat
.github/workflows/: release.yml
docs/: clock-tree-json.md
drawio-lib/: README.md  drawclock.xml
example/: README.md  demo.drawio  fig1.drawio  fig2.drawio
example/refs/: pll_main_fanout_waypoints.json
reload/: __main__.py  drawio_layout.py  layout_validate.py  migrate.py
scripts/: build_drawio_lib.py  build_example_demo.py
scripts/drawio_lib/: build.py  paths.py  validate.py  xml_io.py
src/: __main__.py  config_export.py  device_attrs_convert.py  device_attrs_validate.py  device_model.py  drawclock.py  drawio_build.py  drawio_decode.py  drawio_graph.py  drawio_layout.py  drawio_library.py  drawio_ports.py  from_resolve.py  internal_kind.py  layout_validate.py  library_ports.py  migrate.py  pipeline.py  topology.py  validate_config.py  wire_resolve.py
tests/: _tmp_svg_reload.drawio  kind_families.py  test_build_drawio_lib.py  test_decode_cli.py  test_device_attrs.py  test_drawio_ports.py  test_label_overflow.py  test_main.py  test_mux2_geometry.py  test_mux_components.py  test_parse_drawio.py  test_port_graphic_alignment.py  test_reload.py  test_roundtrip.py  test_simple_components.py  test_topology_diagnostics.py
tests/_tmp_cli_run/: clock-tree.json
tools/: README.md  bundle_release.py  ci_pack_ubuntu16.sh  pack.bat  pack.sh  run_frozen_example.py
(+87 files in other folders)
