[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "drawio-to-clock-tree"
version = "0.0.0"
description = "从 draw.io 图生成时钟树相关输出"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
