[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "drawclock"
version = "0.0.0"
description = "从 draw.io 图生成时钟树相关输出"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "config_export",
    "device_attrs_convert",
    "device_attrs_validate",
    "device_model",
    "drawio_build",
    "drawio_decode",
    "drawio_graph",
    "drawio_layout",
    "drawio_library",
    "drawio_ports",
    "layout_validate",
    "migrate",
    "pipeline",
    "topology",
    "validate_config",
    "from_resolve",
    "library_ports",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
